--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "Let's study of Reactive extensions for JavaScript",
+  "name": "study-rxjs",
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "build": "node ./node_modules/webpack/bin/webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,7 +14,10 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0"
+    "babel-register": "^6.26.0",
+    "webpack": "^4.10.2",
+    "webpack-cli": "^3.0.1"
   }
 }
